# xenon

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  RECIPES.md  REFACTORING.md  commit_message.txt  demo_error_handling.py  fix_tests.py  poc_streaming.py  pyproject.toml  xenon_demo.ipynb
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md  question.md
.github/workflows/: ci.yml
benchmarks/: run_benchmarks.py
docs/: API_REFERENCE.md  COOKBOOK.md  PERFORMANCE.md  ROADMAP_v0.7.0.md  ROADMAP_v1.1.0.md  STREAMING_ANALYSIS.md  STREAMING_DESIGN.md  SUMMARY_v0.6.0.md
examples/: 01_basic_usage.py  02_llm_integration.py  03_advanced_features.py  04_async_llm_integration.py  xenon_tutorial.ipynb
hooks/: pre-commit
src/xenon/: __init__.py  attribute_parser.py  audit.py  cli.py  config.py  encoding.py  entities.py  exceptions.py  formatting.py  parser.py  preprocessor.py  reporting.py  security.py  streaming.py  trust.py  utils.py  validation.py
src/xenon/integrations/: langchain.py
tests/: test_async.py  test_attribute_escaping.py  test_attribute_robustness.py  test_audit.py  test_benchmarks.py  test_cdata_wrapping.py  test_core.py  test_diff_reporting.py  test_encoding.py  test_enhanced_errors.py  test_entity_escaping.py  test_error_handling.py  test_formatting.py  test_html_entities.py  test_integrated_features.py  test_integrations.py  test_invalid_tag_names.py  test_mismatched_tags.py  test_multiple_roots.py  test_namespace_validation.py  test_property_based.py  test_reporting.py  test_security.py  test_utils.py  test_validation.py
