[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "xenon"
version = "0.1.0"
description = "A robust XML repair library for LLM-generated XML"
readme = "README.md"
requires-python = ">=3.7"
license = "MIT"
authors = [
    { name = "Xenon Contributors" },
]
keywords = [
    "xml",
    "parser",
    "repair",
    "llm",
    "language-model",
    "malformed",
    "fix",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Text Processing :: Markup :: XML",
]

# Zero runtime dependencies - uses only Python Standard Library
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=6.0",
    "pytest-cov",
    "black",
    "flake8",
    "mypy",
]

[project.urls]
Homepage = "https://github.com/xenon-xml/xenon"
Documentation = "https://github.com/xenon-xml/xenon"
Repository = "https://github.com/xenon-xml/xenon"
"Bug Tracker" = "https://github.com/xenon-xml/xenon/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/xenon"]

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/tests",
    "/README.md",
    "/LICENSE",
]

[tool.black]
line-length = 88
target-version = ['py37']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.mypy]
python_version = "3.7"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"